refactoring docker middleware
