# api/data/entity.go
@@ -2,10 +2,21 @@ package data
 
 import "time"
 
-type FileEntity struct {
-	ID         int       `json:"id"`
-	ExternalId string    `json:"external_id"`
-	State      string    `json:"state"`
-	CreatedAt  time.Time `json:"created_at"`
-	UpdatedAt  time.Time `json:"updated_at"`
+type FunctionEntity struct {
+	ID            int             `json:"id"`
+	ExternalId    string          `json:"external_id"`
+	State         string          `json:"state"`
+	Configuration *FunctionConfig `json:"configuration,omitempty"`
+	CreatedAt     time.Time       `json:"created_at"`
+	UpdatedAt     time.Time       `json:"updated_at"`
+}
+
+type FunctionConfig struct {
+	Trigger   string            `json:"trigger"`
+	Image     string            `json:"image"`
+	Type      string            `json:"type"`
+	Port      *int              `json:"port,omitempty"`
+	EnvVars   map[string]string `json:"env_vars,omitempty"`
+	CreatedAt time.Time         `json:"created_at"`
+	UpdatedAt time.Time         `json:"updated_at"`
 }
