# docs/swagger.json
@@ -38,7 +38,7 @@
                     "201": {
                         "description": "File uploaded and processed successfully",
                         "schema": {
-                            "$ref": "#/definitions/data.FileEntity"
+                            "$ref": "#/definitions/data.FunctionEntity"
                         }
                     },
                     "400": {
@@ -58,9 +58,41 @@
         }
     },
     "definitions": {
-        "data.FileEntity": {
+        "data.FunctionConfig": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "env_vars": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "image": {
+                    "type": "string"
+                },
+                "port": {
+                    "type": "integer"
+                },
+                "trigger": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "data.FunctionEntity": {
+            "type": "object",
+            "properties": {
+                "configuration": {
+                    "$ref": "#/definitions/data.FunctionConfig"
+                },
                 "created_at": {
                     "type": "string"
                 },
